--- a/implementation/package.json
+++ b/implementation/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "pg": "^8.7.1",
+    "prompt": "^1.2.0",
     "prompt-async": "^0.9.9",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "uuid": "^8.3.2"
   }
 }
